--- a/logstash/loki.conf
+++ b/logstash/loki.conf
@@ -9,20 +9,20 @@ output {
   loki {
     url => "http://localhost:3100"
 
-    #tenant_id => "fake"
+    include_labels => ["@version"]
+    
+    tenant_id => "fake"
 
-    #message_field => "message"
+    message_field => "message" 
 
-    #batch_wait => 3 ## in seconds
+    batch_wait => 1
 
-    #batch_size => 102400 #bytes
+    batch_size => 102400
 
-    #external_labels => {"test" => "value", "someotherkey" => "someothervalue"}
+    min_delay => 1
 
-    ##while excluding label, if any nested labels are there, provide the key of nested label
-    ## For example, if the labels are {"file" => "/var/log/test.log", "version"=> "1", "agent" => {"host" => "172.0.0.1", {"type" => "filebeat"}, "id" => "123"}}
-    ## if you want to exclude host and id. configuration should be #exclude_labels => ["host", "id"]
-    ## if you want to exclude the whole agent label. You can configure like below
-    #exclude_labels => ["agent", "version"] 
+    max_delay => 300
+
+    retries => 1
   }
 }
