--- a/logstash/loki.conf
+++ b/logstash/loki.conf
@@ -1,28 +1,45 @@
 input {
-#  generator { message => "Hello world!" count => 1 }
-  beats {
-    port => 5044
-  }
-}
+#   generator {
+#     message => "Hello world!"
+#     count => 1
+#     add_field=>{bar=> "hey",foo=>{yolo=>"buzz"}}
+#     tags=>["foo","tag"]
+#   }
+#   beats {
+#     port => 5044
+#   }
+# }
 
 output {
   loki {
-    url => "http://localhost:3100"
+    url => "http://localhost:3100/loki/api/v1/push"
 
-    include_labels => ["@version"]
-    
-    tenant_id => "fake"
+    # include_labels => ["host_name", "log_file_path","bar"]
 
-    message_field => "message" 
+    #tenant_id => "fake" #default none
 
-    batch_wait => 1
+    #message_field => "message" #default message
 
-    batch_size => 102400
+    #batch_wait => 1 ## in seconds #default 1 second
 
-    min_delay => 1
+    #batch_size => 102400 #bytes #default 102400 bytes
 
-    max_delay => 300
+    #min_delay => 1
 
-    retries => 1
+    #max_delay => 300
+
+    #retries => 10
+
+    # Basic auth credentials
+    #username => "test"
+
+    #password => "test"
+
+    # TLS config
+    # cert => /path/to/certificate.pem
+
+    # key => /path/to/key.key
+
+    # ca_cert => /path/to/ca.pem
   }
 }
