Allow to provision external pipeline files to plugin

--- a/cmd/docker-driver/config.json
+++ b/cmd/docker-driver/config.json
@@ -16,5 +16,16 @@
 			"value": "info",
 			"settable": ["value"]
 		}
+	],
+    "mounts": [
+        {
+            "name": "data",
+            "description": "Optional external pipelines files",
+            "source": "",
+            "destination": "/data",
+            "type": "none",
+            "options": ["bind", "ro"],
+			"settable": ["source"]
+        }
 	]
 }
