Test setup, adapt default configuration

--- a/cmd/fluentd/docker/conf/loki.conf
+++ b/cmd/fluentd/docker/conf/loki.conf
@@ -1,12 +1,9 @@
-<match **>
+<match loki.**>
   @type loki
   url "#{ENV['LOKI_URL']}"
-  username "#{ENV['LOKI_USERNAME']}"
-  password "#{ENV['LOKI_PASSWORD']}"
   extra_labels {"env":"dev"}
-  label_keys "job,instance,level"
-  drop_single_key true
-  flush_interval 10s
-  flush_at_shutdown true
-  buffer_chunk_limit 1m
+  <buffer>
+    flush_interval 10s
+    flush_at_shutdown true
+  </buffer>
 </match>
