--- a/cmd/fluentd/docker/conf/loki.conf
+++ b/cmd/fluentd/docker/conf/loki.conf
@@ -1,7 +1,7 @@
 <match loki.**>
   @type loki
   url "#{ENV['LOKI_URL']}"
-  extra_labels {"env":"dev"}
+  extra_labels {"job":"fluentd"}
   <buffer>
     flush_interval 10s
     flush_at_shutdown true
