updating all the images to 1.5.0 release
Signed-off-by: Ed Welch <edward.welch@grafana.com>

--- a/production/helm/loki/values.yaml
+++ b/production/helm/loki/values.yaml
@@ -1,6 +1,6 @@
 image:
   repository: grafana/loki
-  tag: 1.4.1
+  tag: 1.5.0
   pullPolicy: IfNotPresent
 
   ## Optionally specify an array of imagePullSecrets.
@@ -63,8 +63,8 @@ config:
       #   consul:
       #     host: "consul:8500"
       #     prefix: ""
-      #     httpclienttimeout: "20s"
-      #     consistentreads: true
+      #     http_client_timeout: "20s"
+      #     consistent_reads: true
   limits_config:
     enforce_metric_name: false
     reject_old_samples: true
