--- a/production/helm/loki/values.yaml
+++ b/production/helm/loki/values.yaml
@@ -86,7 +86,7 @@ config:
     filesystem:
       directory: /data/loki/chunks
   chunk_store_config:
-    max_look_back_period: 0
+    max_look_back_period: 0s
   table_manager:
     retention_deletes_enabled: false
     retention_period: 0s
