--- a/cmd/fluentd/Gemfile
+++ b/cmd/fluentd/Gemfile
@@ -2,9 +2,5 @@
 
 source 'https://rubygems.org'
 
+# Specify your gem's dependencies in fluent-plugin-grafana-loki.gemspec
 gemspec
-
-gem 'fluentd', '1.9.3'
-gem 'rubocop-rspec'
-gem 'simplecov', require: false, group: :test
-gem 'test-unit'
