--- a/cmd/promtail/Dockerfile.debug
+++ b/cmd/promtail/Dockerfile.debug
@@ -14,7 +14,7 @@ RUN        apk add --update --no-cache ca-certificates tzdata
 COPY       --from=build /src/loki/cmd/promtail/promtail-debug /usr/bin/promtail-debug
 COPY       --from=build /go/bin/dlv /usr/bin/dlv
 COPY       cmd/promtail/promtail-local-config.yaml /etc/promtail/local-config.yaml
-COPY       cmd/promtail/promtail-docker-config.yaml /etc/promtail/docker-config.yaml
+COPY       cmd/promtail/promtail-docker-config.yaml /etc/promtail/config.yml
 
 # Expose 40000 for delve
 EXPOSE 40000
@@ -26,3 +26,4 @@ RUN apk add --no-cache libc6-compat
 #   Pass flags to the program you are debugging using --, for example:`
 #   dlv exec ./hello -- server --config conf/config.toml`
 ENTRYPOINT ["/usr/bin/dlv", "--listen=:40000", "--headless=true", "--api-version=2", "exec", "/usr/bin/promtail-debug", "--"]
+CMD ["-config.file=/etc/promtail/config.yml"]
