--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ version: 2
   <<: *tags
 
 .no-master:
-  &no-master # contrary to tags, the branches must be excluded (blacklist)
+  &no-master # contrary to tags, the branches must be excluded
   branches: { ignore: master }
 
 workflows:
