--- a/tools/lambda-promtail/Makefile
+++ b/tools/lambda-promtail/Makefile
@@ -1,9 +1,9 @@
 UNAME_S := $(shell uname -s)
 LOCAL_PORT ?= 8080
 ifeq ($(UNAME_S),Linux)
-	LOCAL_ENDPOINT=http://localhost:$(LOCAL_PORT)
+	LOCAL_ENDPOINT=http://localhost:$(LOCAL_PORT)/loki/api/v1/push
 else
-	LOCAL_ENDPOINT=http://host.docker.internal:$(LOCAL_PORT)
+	LOCAL_ENDPOINT=http://host.docker.internal:$(LOCAL_PORT)/loki/api/v1/push
 endif
 
 .PHONY: build
