Fully tested version.
Now testing/writing docs and charts.

Signed-off-by: Cyril Tovena <cyril.tovena@gmail.com>

--- a/cmd/logstash/loki-test.conf
+++ b/cmd/logstash/loki-test.conf
@@ -1,4 +1,9 @@
 input {
+    generator {
+        message => "Hello world!"
+        count => 10
+        add_field => {cluster=> "foo",namespace=>"bar"}
+    }
     beats {
         port => 5044
     }
