production/helm: add standard k8s label for name

--- a/production/helm/fluent-bit/templates/serviceaccount.yaml
+++ b/production/helm/fluent-bit/templates/serviceaccount.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   labels:
+    app.kubernetes.io/name: {{ template "fluent-bit-loki.name" . }}
     app: {{ template "fluent-bit-loki.name" . }}
     chart: {{ template "fluent-bit-loki.chart" . }}
     heritage: {{ .Release.Service }}
