--- a/production/helm/loki-stack/templates/datasources.yaml
+++ b/production/helm/loki-stack/templates/datasources.yaml
@@ -5,6 +5,7 @@ metadata:
   name: {{ template "loki-stack.fullname" . }}
   namespace: {{ .Release.Namespace }}
   labels:
+    app.kubernetes.io/name: {{ template "loki-stack.name" . }}
     app: {{ template "loki-stack.name" . }}
     chart: {{ template "loki-stack.chart" . }}
     release: {{ .Release.Name }}
