--- a/production/helm/loki-stack/templates/tests/loki-test-configmap.yaml
+++ b/production/helm/loki-stack/templates/tests/loki-test-configmap.yaml
@@ -3,6 +3,7 @@ kind: ConfigMap
 metadata:
   name: {{ template "loki-stack.fullname" . }}-test
   labels:
+    app.kubernetes.io/name: {{ template "loki-stack.name" . }}
     app: {{ template "loki-stack.name" . }}
     chart: {{ template "loki-stack.chart" . }}
     release: {{ .Release.Name }}
