--- a/production/helm/promtail/templates/serviceaccount.yaml
+++ b/production/helm/promtail/templates/serviceaccount.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   labels:
+    app.kubernetes.io/name: {{ template "promtail.name" . }}
     app: {{ template "promtail.name" . }}
     chart: {{ template "promtail.chart" . }}
     heritage: {{ .Release.Service }}
