--- a/production/helm/fluent-bit/templates/clusterrole.yaml
+++ b/production/helm/fluent-bit/templates/clusterrole.yaml
@@ -3,6 +3,7 @@ kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   labels:
+    app.kubernetes.io/name: {{ template "fluent-bit-loki.name" . }}
     app: {{ template "fluent-bit-loki.name" . }}
     chart: {{ template "fluent-bit-loki.chart" . }}
     release: {{ .Release.Name }}
