--- a/production/helm/fluent-bit/templates/clusterrolebinding.yaml
+++ b/production/helm/fluent-bit/templates/clusterrolebinding.yaml
@@ -4,6 +4,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: {{ template "fluent-bit-loki.fullname" . }}-clusterrolebinding
   labels:
+    app.kubernetes.io/name: {{ template "fluent-bit-loki.name" . }}
     app: {{ template "fluent-bit-loki.name" . }}
     chart: {{ template "fluent-bit-loki.chart" . }}
     release: {{ .Release.Name }}
