--- a/production/helm/fluent-bit/templates/daemonset.yaml
+++ b/production/helm/fluent-bit/templates/daemonset.yaml
@@ -4,6 +4,7 @@ metadata:
   name: {{ template "fluent-bit-loki.fullname" . }}
   namespace: {{ .Release.Namespace }}
   labels:
+    app.kubernetes.io/name: {{ template "fluent-bit-loki.name" . }}
     app: {{ template "fluent-bit-loki.name" . }}
     chart: {{ template "fluent-bit-loki.chart" . }}
     release: {{ .Release.Name }}
@@ -23,6 +24,7 @@ spec:
   template:
     metadata:
       labels:
+        app.kubernetes.io/name: {{ template "fluent-bit-loki.name" . }}
         app: {{ template "fluent-bit-loki.name" . }}
         release: {{ .Release.Name }}
         {{- with .Values.podLabels }}
