--- a/production/helm/fluent-bit/templates/podsecuritypolicy.yaml
+++ b/production/helm/fluent-bit/templates/podsecuritypolicy.yaml
@@ -4,6 +4,7 @@ kind: PodSecurityPolicy
 metadata:
   name: {{ template "fluent-bit-loki.fullname" . }}
   labels:
+    app.kubernetes.io/name: {{ template "fluent-bit-loki.name" . }}
     app: {{ template "fluent-bit-loki.name" . }}
     chart: {{ template "fluent-bit-loki.chart" . }}
     heritage: {{ .Release.Service }}
