--- a/production/helm/fluent-bit/templates/service-headless.yaml
+++ b/production/helm/fluent-bit/templates/service-headless.yaml
@@ -5,6 +5,7 @@ metadata:
   name: {{ template "fluent-bit-loki.fullname" . }}-headless
   namespace: {{ .Release.Namespace }}
   labels:
+    app.kubernetes.io/name: {{ template "fluent-bit-loki.name" . }}
     app: {{ template "fluent-bit-loki.name" . }}
     chart: {{ template "fluent-bit-loki.chart" . }}
     release: {{ .Release.Name }}
