--- a/production/helm/fluent-bit/templates/servicemonitor.yaml
+++ b/production/helm/fluent-bit/templates/servicemonitor.yaml
@@ -4,6 +4,7 @@ kind: ServiceMonitor
 metadata:
   name: {{ template "fluent-bit-loki.fullname" . }}
   labels:
+    app.kubernetes.io/name: {{ template "fluent-bit-loki.name" . }}
     app: {{ template "fluent-bit-loki.name" . }}
     chart: {{ template "fluent-bit-loki.chart" . }}
     release: {{ .Release.Name }}
