--- a/production/helm/promtail/templates/service-headless.yaml
+++ b/production/helm/promtail/templates/service-headless.yaml
@@ -5,6 +5,7 @@ metadata:
   name: {{ template "promtail.fullname" . }}-headless
   namespace: {{ .Release.Namespace }}
   labels:
+    app.kubernetes.io/name: {{ template "promtail.name" . }}
     app: {{ template "promtail.name" . }}
     chart: {{ template "promtail.chart" . }}
     release: {{ .Release.Name }}
