--- a/production/helm/promtail/templates/servicemonitor.yaml
+++ b/production/helm/promtail/templates/servicemonitor.yaml
@@ -4,6 +4,7 @@ kind: ServiceMonitor
 metadata:
   name: {{ template "promtail.fullname" . }}
   labels:
+    app.kubernetes.io/name: {{ template "promtail.name" . }}
     app: {{ template "promtail.name" . }}
     chart: {{ template "promtail.chart" . }}
     release: {{ .Release.Name }}
