--- a/production/docker-compose.yaml
+++ b/production/docker-compose.yaml
@@ -16,7 +16,7 @@ services:
     image: grafana/promtail:1.6.0
     volumes:
       - /var/log:/var/log
-    command: -config.file=/etc/promtail/docker-config.yaml
+    command: -config.file=/etc/promtail/config.yml
     networks:
       - loki
 
