fixes ruler docs & includes ruler configs in cmd/configs + docker img

--- a/cmd/loki/Dockerfile
+++ b/cmd/loki/Dockerfile
@@ -15,7 +15,8 @@ COPY cmd/loki/loki-docker-config.yaml /etc/loki/local-config.yaml
 
 RUN addgroup -g 10001 -S loki && \
     adduser -u 10001 -S loki -G loki
-RUN mkdir -p /loki && \
+RUN mkdir -p /loki/rules && \
+    mkdir -p /loki/tmprules && \
     chown -R loki:loki /etc/loki /loki
 
 # See https://github.com/grafana/loki/issues/1928
