--- a/production/helm/loki/templates/serviceaccount.yaml
+++ b/production/helm/loki/templates/serviceaccount.yaml
@@ -10,6 +10,6 @@ metadata:
   annotations:
     {{- toYaml .Values.serviceAccount.annotations | nindent 4 }}
   name: {{ template "loki.serviceAccountName" . }}
-  namespace: {{ .Release.Namespace }}
+  namespace: {{ template "loki.namespace" . }}
 {{- end }}
 
