--- a/production/helm/loki/templates/pdb.yaml
+++ b/production/helm/loki/templates/pdb.yaml
@@ -3,7 +3,7 @@ apiVersion: policy/v1beta1
 kind: PodDisruptionBudget
 metadata:
   name: {{ template "loki.fullname" . }}
-  namespace: {{ .Release.Namespace }}
+  namespace: {{ template "loki.namespace" . }}
   labels:
     app: {{ template "loki.name" . }}
     heritage: {{ .Release.Service }}
