--- a/production/helm/promtail/templates/serviceaccount.yaml
+++ b/production/helm/promtail/templates/serviceaccount.yaml
@@ -8,6 +8,6 @@ metadata:
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
   name: {{ template "promtail.serviceAccountName" . }}
-  namespace: {{ .Release.Namespace }}
+  namespace: {{ template "promtail.namespace" . }}
 {{- end }}
 
