--- a/production/helm/promtail/values.yaml
+++ b/production/helm/promtail/values.yaml
@@ -37,6 +37,8 @@ loki:
 
 nameOverride: promtail
 
+namespaceOverride: ""
+
 ## Node labels for pod assignment
 ## ref: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/
 nodeSelector: {}
