--- a/production/helm/promtail/templates/role.yaml
+++ b/production/helm/promtail/templates/role.yaml
@@ -3,7 +3,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   name: {{ template "promtail.fullname" . }}
-  namespace: {{ .Release.Namespace }}
+  namespace: {{ template "promtail.namespace" . }}
   labels:
     app: {{ template "promtail.name" . }}
     chart: {{ template "promtail.chart" . }}
