--- a/production/helm/promtail/templates/service-headless.yaml
+++ b/production/helm/promtail/templates/service-headless.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ template "promtail.fullname" . }}-headless
-  namespace: {{ .Release.Namespace }}
+  namespace: {{ template "promtail.namespace" . }}
   labels:
     app: {{ template "promtail.name" . }}
     chart: {{ template "promtail.chart" . }}
