Clear error symlink

--- a/production/helm/promtail/values.yaml
+++ b/production/helm/promtail/values.yaml
@@ -43,6 +43,8 @@ nodeSelector: {}
 
 pipelineStages:
 - docker: {}
+- drop:
+    expression: ".*(error).*(filetarget.go).*(no such file).*"
 
 ## Pod Labels
 podLabels: {}
