add a global namespaceOverride in umbrella chart

--- a/production/helm/loki-stack/templates/datasources.yaml
+++ b/production/helm/loki-stack/templates/datasources.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ template "loki-stack.fullname" . }}
-  namespace: {{ .Release.Namespace }}
+  namespace: {{ template "loki-stack.namespace" . }}
   labels:
     app: {{ template "loki-stack.name" . }}
     chart: {{ template "loki-stack.chart" . }}
