--- a/production/helm/promtail/values.yaml
+++ b/production/helm/promtail/values.yaml
@@ -44,6 +44,13 @@ nodeSelector: {}
 pipelineStages:
 - docker: {}
 
+# extraRelabelConfigs:
+#   - action: drop
+#    source_labels:
+#    - filename
+#    - pod
+#    - pod_template_hash
+
 ## Pod Labels
 podLabels: {}
 
