create ruler local filesystems directories if they don't exist change the ruler paths to be a little more consistent

--- a/cmd/loki/loki-docker-config.yaml
+++ b/cmd/loki/loki-docker-config.yaml
@@ -52,8 +52,8 @@ ruler:
     type: local
     local:
       directory: /loki/rules
-  rule_path: /loki/tmprules
-  alertmanager_url: http://localhost
+  rule_path: /loki/rules-temp
+  alertmanager_url: http://localhost:9093
   ring:
     kvstore:
       store: inmemory
