--- a/production/helm/loki/values.yaml
+++ b/production/helm/loki/values.yaml
@@ -71,13 +71,13 @@ config:
     reject_old_samples_max_age: 168h
   schema_config:
     configs:
-    - from: 2018-04-15
-      store: boltdb
+    - from: 2020-10-24
+      store: boltdb-shipper
       object_store: filesystem
-      schema: v9
+      schema: v11
       index:
         prefix: index_
-        period: 168h
+        period: 24h
   server:
     http_listen_port: 3100
   storage_config:
