fix helm config for boltdb-shipper

--- a/production/helm/loki/values.yaml
+++ b/production/helm/loki/values.yaml
@@ -81,8 +81,11 @@ config:
   server:
     http_listen_port: 3100
   storage_config:
-    boltdb:
-      directory: /data/loki/index
+    boltdb_shipper:
+      active_index_directory: /data/loki/boltdb-shipper-active
+      cache_location: /data/loki/boltdb-shipper-cache
+      cache_ttl: 24h         # Can be increased for faster performance over longer query periods, uses more disk space
+      shared_store: filesystem
     filesystem:
       directory: /data/loki/chunks
   chunk_store_config:
@@ -90,6 +93,9 @@ config:
   table_manager:
     retention_deletes_enabled: false
     retention_period: 0s
+  compactor:
+    working_directory: /data/loki/boltdb-shipper-compactor
+    shared_store: filesystem
 
 ## Additional Loki container arguments, e.g. log level (debug, info, warn, error)
 extraArgs: {}
