--- a/cmd/promtail/Dockerfile
+++ b/cmd/promtail/Dockerfile
@@ -4,6 +4,7 @@ FROM golang:1.15.3-buster as build
 ARG TOUCH_PROTOS
 COPY . /src/loki
 WORKDIR /src/loki
+# Backports repo required to get a libsystemd version 246 or newer which is required to handle journal +ZSTD compression
 RUN echo "deb http://deb.debian.org/debian buster-backports main" >> /etc/apt/sources.list
 RUN apt-get update && apt-get install -t buster-backports -qy libsystemd-dev
 RUN make clean && (if [ "${TOUCH_PROTOS}" ]; then make touch-protos; fi) && make BUILD_IN_CONTAINER=false promtail
@@ -11,6 +12,7 @@ RUN make clean && (if [ "${TOUCH_PROTOS}" ]; then make touch-protos; fi) && make
 # Promtail requires debian as the base image to support systemd journal reading
 FROM debian:buster-slim
 # tzdata required for the timestamp stage to work
+# Backports repo required to get a libsystemd version 246 or newer which is required to handle journal +ZSTD compression
 RUN echo "deb http://deb.debian.org/debian buster-backports main" >> /etc/apt/sources.list
 RUN apt-get update && \
   apt-get install -qy \
