Add basic formatter for GCP log entry
- Create uniq label to create stream without out-of-order timestamp
- extract instance id and timestamp from log entry

--- a/cmd/promtail/promtail-local-pubsub-config.yaml
+++ b/cmd/promtail/promtail-local-pubsub-config.yaml
@@ -13,3 +13,4 @@ scrape_configs:
     pubsub:
       projectID: "grafanalabs-dev"
       subscription: "dev-logs-pull"
+      credentialsPath: "/Users/kaviraj/Dropbox/notes/Grafana-keys/ops-tools-1203-05e9ed53e705.json"
