add ws support and adjust docker-compose-container run order by depends_on

--- a/production/docker/config/nginx-loki-gateway.conf
+++ b/production/docker/config/nginx-loki-gateway.conf
@@ -59,6 +59,12 @@ http {
     listen 3100;
     proxy_set_header     X-Scope-OrgID docker-ha;
 
+    location = /loki/api/v1/tail {
+        proxy_pass       http://querier$request_uri;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+    }
+
     location ~ /loki/api/.* {
         proxy_pass       http://querier$request_uri;
     }
