--- a/production/docker/docker-compose-ha-memberlist.yaml
+++ b/production/docker/docker-compose-ha-memberlist.yaml
@@ -12,9 +12,83 @@ services:
     networks:
       - loki
 
+  loki-1:
+    image: grafana/loki:2.0.0
+    volumes:
+      - /etc/localtime:/etc/localtime
+      - ./config:/etc/loki/
+      - ./chunks:/loki/chunks/
+    ports:
+      - "3100"
+      - "7946"
+    command: "-config.file=/etc/loki/loki-docker-memberlist-boltdb-shipper.yaml -target=all"
+    networks:
+      - loki
+    restart: always
+
+  loki-2:
+    image: grafana/loki:2.0.0
+    volumes:
+      - /etc/localtime:/etc/localtime
+      - ./config:/etc/loki/
+      - ./chunks:/loki/chunks/
+    ports:
+      - "3100"
+      - "7946"
+    command: "-config.file=/etc/loki/loki-docker-memberlist-boltdb-shipper.yaml -target=all"
+    networks:
+      - loki
+    restart: always
+
+  loki-3:
+    image: grafana/loki:2.0.0
+    volumes:
+      - /etc/localtime:/etc/localtime
+      - ./config:/etc/loki/
+      - ./chunks:/loki/chunks/
+    ports:
+      - "3100"
+      - "7946"
+    command: "-config.file=/etc/loki/loki-docker-memberlist-boltdb-shipper.yaml -target=all"
+    networks:
+      - loki
+    restart: always
+
+  loki-frontend:
+    image: grafana/loki:2.0.0
+    volumes:
+      - /etc/localtime:/etc/localtime
+      - ./config:/etc/loki/
+    ports:
+      - "3100"
+    command: "-config.file=/etc/loki/loki-docker-memberlist-boltdb-shipper.yaml -target=query-frontend"
+    networks:
+      - loki
+    deploy:
+      mode: replicated
+      replicas: 2
+    restart: always
+
+  loki-gateway:
+    image: nginx:1.19
+    volumes:
+      - /etc/localtime:/etc/localtime
+      - ./config/nginx-loki-gateway.conf:/etc/nginx/nginx.conf
+    ports:
+      - "80:80"
+      - "3100:3100"
+    networks:
+      - loki
+    restart: always
+    depends_on:
+      - loki-1
+      - loki-2
+      - loki-3
+
   promtail:
     image: grafana/promtail:2.0.0
     volumes:
+      - /etc/localtime:/etc/localtime
       - /var/log:/var/log
       - ./config:/etc/promtail/
     ports:
@@ -22,67 +96,6 @@ services:
     command: -config.file=/etc/promtail/promtail-gateway.yaml
     networks:
       - loki
-
-  loki-gateway:
-    image: nginx:1.19
-    volumes:
-      - ./config/nginx-loki-gateway.conf:/etc/nginx/nginx.conf
-    ports:
-      - "80"
-      - "3100"
-    networks:
-      - loki
-
-  loki-frontend:
-    image: grafana/loki:2.0.0
-    volumes:
-        - ./config:/etc/loki/
-    ports:
-        - "3100"
-    command: "-config.file=/etc/loki/loki-docker-memberlist-boltdb-shipper.yaml -target=query-frontend"
-    networks:
-      - loki
-    deploy:
-      mode: replicated
-      replicas: 2
-
-  loki-1:
-    image: grafana/loki:2.0.0
-    volumes:
-      - ./config:/etc/loki/
-      - ./chunks:/loki/chunks/
-    ports:
-      - "3100"
-      - "7946"
-    command: "-config.file=/etc/loki/loki-docker-memberlist-boltdb-shipper.yaml -target=all"
-    networks:
-      - loki
-    restart: on-failure
-
-  loki-2:
-    image: grafana/loki:2.0.0
-    volumes:
-      - ./config:/etc/loki/
-      - ./chunks:/loki/chunks/
-    ports:
-      - "3100"
-      - "7946"
-    command: "-config.file=/etc/loki/loki-docker-memberlist-boltdb-shipper.yaml -target=all"
-    # command: "-config.file=/etc/loki/loki-config.yaml"
-    networks:
-      - loki
-    restart: on-failure
-
-  loki-3:
-    image: grafana/loki:2.0.0
-    volumes:
-      - ./config:/etc/loki/
-      - ./chunks:/loki/chunks/
-    ports:
-      - "3100"
-      - "7946"
-    command: "-config.file=/etc/loki/loki-docker-memberlist-boltdb-shipper.yaml -target=all"
-    # command: "-config.file=/etc/loki/loki-config.yaml"
-    networks:
-      - loki
-    restart: on-failure
+    restart: always
+    depends_on:
+      - loki-gateway
