add custom variables for actual need

--- a/production/docker/docker-compose-ha-memberlist.yaml
+++ b/production/docker/docker-compose-ha-memberlist.yaml
@@ -93,7 +93,7 @@ services:
       - ./config:/etc/promtail/
     ports:
       - "9080:9080"
-    command: -config.file=/etc/promtail/promtail-gateway.yaml
+    command: -config.file=/etc/promtail/promtail-gateway.yaml  -config.expand-env=true
     networks:
       - loki
     restart: always
