Minor refactoring and following changes
- Rename Pubsub* entities to Gcplog*
- Rename pubsub package into gcplog
- Add flag `KeepIncomingTimestamp` to toggle between either keeping incoming timestamps or rewriting with current timestamp
- Tests for gcplog target
- Docs and basic metrics to gcplog target

--- a/cmd/promtail/promtail-local-pubsub-config.yaml
+++ b/cmd/promtail/promtail-local-pubsub-config.yaml
@@ -10,8 +10,9 @@ clients:
 
 scrape_configs:
   - job_name: pubsub-test
-    pubsub:
+    gcplog:
       project_id: "grafanalabs-dev"
       subscription: "dev-logs-pull"
+      use_incoming_timestamp: false # default rewrite timestamp.
       labels:
         job: pubsub-gcp
