--- a/production/docker/docker-compose-ha-memberlist.yaml
+++ b/production/docker/docker-compose-ha-memberlist.yaml
@@ -24,7 +24,7 @@ services:
     command: "-config.file=/etc/loki/loki-docker-memberlist-boltdb-shipper.yaml -target=all"
     networks:
       - loki
-    restart: always
+    restart: on-failure
 
   loki-2:
     image: grafana/loki:2.0.0
@@ -38,7 +38,7 @@ services:
     command: "-config.file=/etc/loki/loki-docker-memberlist-boltdb-shipper.yaml -target=all"
     networks:
       - loki
-    restart: always
+    restart: on-failure
 
   loki-3:
     image: grafana/loki:2.0.0
@@ -52,7 +52,7 @@ services:
     command: "-config.file=/etc/loki/loki-docker-memberlist-boltdb-shipper.yaml -target=all"
     networks:
       - loki
-    restart: always
+    restart: on-failure
 
   loki-frontend:
     image: grafana/loki:2.0.0
@@ -67,7 +67,7 @@ services:
     deploy:
       mode: replicated
       replicas: 2
-    restart: always
+    restart: on-failure
 
   loki-gateway:
     image: nginx:1.19
@@ -79,7 +79,7 @@ services:
       - "3100:3100"
     networks:
       - loki
-    restart: always
+    restart: on-failure
     depends_on:
       - loki-1
       - loki-2
@@ -96,6 +96,6 @@ services:
     command: -config.file=/etc/promtail/promtail-gateway.yaml  -config.expand-env=true
     networks:
       - loki
-    restart: always
+    restart: on-failure
     depends_on:
       - loki-gateway
