--- a/.golangci.yml
+++ b/.golangci.yml
@@ -16,7 +16,7 @@ run:
   tests: true
 
   # list of build tags, all linters use it. Default is empty list.
-  build-tags:
+  build-tags: windows
 
   # which dirs to skip: they won't be analyzed;
   # can use regexp here: generated.*, regexp is applied on full path;
