testing out windows drone.
Signed-off-by: Cyril Tovena <cyril.tovena@gmail.com>

--- a/.drone/drone.yml
+++ b/.drone/drone.yml
@@ -43,6 +43,19 @@ steps:
 
 ---
 kind: pipeline
+name: promtail-windows
+
+platform:
+  os: windows
+  arch: amd64
+
+steps:
+- name: test
+  commands:
+  - go.exe test .\pkg\promtail\targets\windows\... -v
+
+---
+kind: pipeline
 name: docker-amd64
 
 platform:
