build windows on container.
Signed-off-by: Cyril Tovena <cyril.tovena@gmail.com>

--- a/.drone/drone.yml
+++ b/.drone/drone.yml
@@ -48,12 +48,14 @@ name: promtail-windows
 platform:
   os: windows
   arch: amd64
+  version: 1809
 
 steps:
 - name: test
   image: golang:nanoserver-1809
   commands:
-  - go.exe test .\pkg\promtail\targets\windows\... -v
+  - dir
+  - go test .\pkg\promtail\targets\windows\... -v
 
 ---
 kind: pipeline
