--- a/.drone/drone.yml
+++ b/.drone/drone.yml
@@ -862,4 +862,19 @@ trigger:
 depends_on:
 - manifest
 
+---
+kind: pipeline
+name: promtail-windows
+
+platform:
+  os: windows
+  arch: amd64
+  version: 1809
+
+steps:
+- name: test
+  image: golang:windowsservercore-1809
+  commands:
+  - go test .\pkg\promtail\targets\windows\... -v
+
 ...
