--- a/.golangci.yml
+++ b/.golangci.yml
@@ -69,3 +69,4 @@ linters:
 issues:
   exclude:
     - Error return value of .*log\.Logger\)\.Log\x60 is not checked
+    - Error return value of .*.Log.* is not checked
