Fix other OS files

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -43,7 +43,7 @@ output:
 
 linters-settings:
   goimports:
-    local-prefixes: github.com/grafana/loki/pkg
+    local-prefixes: github.com/grafana/loki/v2/pkg
 
 linters:
   enable:
