kustomize/v1/base/{ => config}/loki-config.yaml

--- a/kustomize/v1/base/distributor-deploy.yaml
+++ b/kustomize/v1/base/distributor-deploy.yaml
@@ -23,7 +23,7 @@ spec:
         args:
         - -target=distributor
         - -config.file=/etc/loki/config/loki-config.yaml
-        - -log.level=debug
+        - -log.level=error
         env: []
         ports:
         - containerPort: 3100
