--- a/kustomize/v1/base/query-frontend-deploy.yaml
+++ b/kustomize/v1/base/query-frontend-deploy.yaml
@@ -23,7 +23,7 @@ spec:
         args:
         - -target=query-frontend
         - -config.file=/etc/loki/config/loki-config.yaml
-        - -log.level=debug
+        - -log.level=error
         livenessProbe:
           failureThreshold: 10
           httpGet:
