--- a/internal/manifests/config/loki-config.yaml
+++ b/internal/manifests/config/loki-config.yaml
@@ -51,10 +51,10 @@ limits_config:
   reject_old_samples: true
   reject_old_samples_max_age: 24h
 memberlist:
-  abort_if_cluster_join_fails: false
-  bind_port: 7946
+  abort_if_cluster_join_fails: true
+  bind_port: {{ .GossipRing.Port }}
   join_members:
-    - dns+{{ .GossipRing.FQDN }}:{{ .GossipRing.Port }}
+    - {{ .GossipRing.FQDN }}:{{ .GossipRing.Port }}
   max_join_backoff: 1m
   max_join_retries: 10
   min_join_backoff: 1s
@@ -89,6 +89,7 @@ server:
   http_listen_port: 3100
   http_server_idle_timeout: 120s
   http_server_write_timeout: 1m
+  log_level: debug
 storage_config:
   boltdb:
     directory: {{ .StorageDirectory }}/index
