--- a/internal/manifests/config/loki-config.yaml
+++ b/internal/manifests/config/loki-config.yaml
@@ -1,10 +1,7 @@
 ---
 auth_enabled: false
 chunk_store_config:
-  max_look_back_period: 0s
-#  chunk_cache_config:
-#    filesystem:
-#      directory: /tmp/loki/chunk-cache
+  enable_fifocache: yes
 distributor:
   ring:
     kvstore:
